--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
-storage/*.sqlite
-storage/oauth-tokens/*
-storage/database.sqlite
+/storage/*.sqlite
+/storage/oauth-tokens/*
+/storage/database.sqlite
